--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ window.alert("ยินดีต้อนรับสู่นิทรรศส
 <br>
 <div id="menu" style="background:linear-gradient(gray ,DarkViolet ,white); height:400px; width:200px; float:left;">
 <b>📃สารบัญ📃</b><br>
-<a href="Intro.html">🍃บทนำ📖</a><br>
+<a href="intro.html">🍃บทนำ📖</a><br>
 🍃หัวข้อหลักของนิทรรศการ📅<br>
 🍃กิจกรรมและการแสดง✨<br>
 🍃ผลงานของนักเรียน🎬<br>
